--- a/BLAZAMGui/UI/Dashboard/Widgets/NewEntriesWidgetDataGrid.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/NewEntriesWidgetDataGrid.razor
@@ -3,14 +3,14 @@
 
 <MudDataGrid T="@T"
              Items="@Items"
-              Dense
-              Filterable
+              Dense=true
+             Filterable=true
               RowsPerPage="5"
              FilterMode="DataGridFilterMode.Simple"
              Loading=@Loading
-              Square
+             Square=true
              ColumnResizeMode="ResizeMode.Column"
-              Virtualize
+             Virtualize=true
              RowClass="cursor-pointer"
              RowClick=@RowClick
              Class="py-0"
@@ -18,8 +18,14 @@
     <Columns>
         <PropertyColumn Property="x => x.CanonicalName" Title="Name" />
         <PropertyColumn Property="x => x.OU.ToPrettyOu()" Title="OU" />
-        <PropertyColumn Property="x => x.Created" Title="Created" />
-
+        <TemplateColumn Title="Created">
+            <CellTemplate>
+                @if (context.Item.Created != null)
+                {
+                    <MudText>@context.Item.Created.Value.ToLocalTime()</MudText>
+                }
+            </CellTemplate>
+        </TemplateColumn>
     </Columns>
     <PagerContent>
         <MudDataGridPager T="@T" />
