--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -57,6 +57,7 @@
 @using BLAZAM.Gui.UI.Users
 @using BLAZAM.Gui.UI.OU
 @using BLAZAM.Gui.UI.Outputs
+@using BLAZAM.Gui.UI.Dashboard
 @using BLAZAM.Gui.UI.Settings.Permissions
 @using BLAZAM.Gui.UI.Settings.Templates
 
