--- a/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
@@ -29,7 +29,7 @@
     {
         await base.OnInitializedAsync();
 
-        Name = "Disabled Users";
+        Title = "Disabled Users";
         LockedUsers = await Directory.Users.FindChangedPasswordUsersAsync(false);
         LoadingData = false;
         await InvokeAsync(StateHasChanged);
