--- a/BLAZAMGui/UI/Dashboard/Widgets/Widget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/Widget.razor
@@ -3,6 +3,6 @@
 @code {
     [Parameter]
     public RenderFragment? WidgetContent { get; set; }
-    public string? Name { get; set; }
-    public string? Slot { get; set; }
+    public string Title{ get; set; }
+    public DashboardWidgetType WidgetType{ get; set; }
 }
