--- a/BLAZAMGui/_Imports.razor
+++ b/BLAZAMGui/_Imports.razor
@@ -42,6 +42,7 @@
 @using BLAZAM.Gui.UI.Dev
 @using BLAZAM.Gui.UI;
 @using BLAZAM.Gui.UI.Modals
+@using BLAZAM.Gui.UI.Dashboard
 
 @using BLAZAM.Gui.UI.Users
 @using BLAZAM.Gui.UI.Users.Fields
