--- a/BLAZAM/Pages/Computers/ViewComputer.razor
+++ b/BLAZAM/Pages/Computers/ViewComputer.razor
@@ -1,74 +1,150 @@
 ﻿@inherits DirectoryEntryViewBase
-
+@{
+    string _fieldMudStackClasses = "flex-wrap gap-10";
+}
 <AppPageTitle>@Computer?.CanonicalName</AppPageTitle>
 
+<EditForm OnValidSubmit=SaveChanges Context="editContext" Model="Computer">
+
+    <SetSubHeader>
+
+        <DirectoryEntryViewHeader DirectoryEntry="@Computer"
+                                  OnAssignTo="@(()=>{AssignToModal?.Show();})"
+                                  OnChangeThumbnail="@(()=>{UploadThumbnailModal?.Show();})"
+                                  OnDelete="@DeleteComputer"
+                                  OnDisable="@(async()=>{Computer.Enabled=false; await RefreshEntryComponents();})"
+                                  OnEnable="@(async()=>{Computer.Enabled=true; await RefreshEntryComponents();})"
+                                  OnMove="@(()=>{MoveToModal?.Show();})"
+                                  OnRename="@(()=>{RenameModal?.Show();})"
+                                  OnResetPassword="@(()=>{ChangePasswordModal?.Show();})"
+                                  OnToggleEditMode="ToggleEditMode"
+                                  OnUnlock="@Unlock" />
+        <MudOverlay Visible="SavingChanges" DarkBackground="false" Absolute="true">
+
+        </MudOverlay>
 
 
-    <EditForm Context="editContext" Model="Computer">
+    </SetSubHeader>
 
-        <SetSubHeader>
-
-            <DirectoryEntryViewHeader DirectoryEntry="@Computer"
-                                      OnAssignTo="@(()=>{AssignToModal?.Show();})"
-                                      OnChangeThumbnail="@(()=>{UploadThumbnailModal?.Show();})"
-                                      OnDelete="@DeleteComputer"
-                                      OnDisable="@(async()=>{Computer.Enabled=false; await RefreshEntryComponents();})"
-                                      OnEnable="@(async()=>{Computer.Enabled=true; await RefreshEntryComponents();})"
-                                      OnMove="@(()=>{MoveToModal?.Show();})"
-                                      OnRename="@(()=>{RenameModal?.Show();})"
-                                      OnResetPassword="@(()=>{ChangePasswordModal?.Show();})"
-                                      OnToggleEditMode="ToggleEditMode"
-                                      OnUnlock="@Unlock" />
-            <MudOverlay Visible="SavingChanges" DarkBackground="false" Absolute="true">
-
-            </MudOverlay>
+    <CascadingValue Value="EditMode">
+        <CascadingValue Value="Computer">
+            <FlexContainer>
 
 
-        </SetSubHeader>
-
-        <MudCard>
-
-           
-
-            <MudCardHeader>
-            @Computer.CanonicalName
-            </MudCardHeader>
-           <MudCardContent>
-                    @if (drives != null && drives.Count > 0)
-            {
-                <MudDataGrid Items="drives">
-                    <Columns>
-                        <PropertyColumn Property="x=>x.DriveType"/>
-                        <PropertyColumn Property="x=>x.Letter"/>
-                            <TemplateColumn>
-                                <CellTemplate>
-                                    @(context.Item.PercentUsed.Round(0).ToString()+"%")
-                                </CellTemplate>
-                            </TemplateColumn>
-                        <PropertyColumn Property="x=>x.Capacity.Round(0)"/>
-                        <PropertyColumn Property="x=>x.FileSystem"/>
-                        <PropertyColumn Property="x=>x.Serial"/>
-                    </Columns>
-                </MudDataGrid>
-
-            }
-               
-                <ComputerSessions Computer="Computer" />
-            </MudCardContent>
-
-
-           
-        </MudCard>
-
-
-        @if (Computer.HasUnsavedChanges)
-        {
-            <UnsavedChangesPrompt SaveChanges="SaveChanges" DiscardChanges="DiscardChanges" />
-        }
+                <AppModal Color="Color.Dark" Title="Assign To..." @ref=@AssignToModal>
+                    <AssignToModalContent ModelChanged=@RefreshEntryComponents DirectoryModel="Computer" />
+                </AppModal>
+                <AppModal Color="Color.Dark" Title="Move To" @ref=@MoveToModal>
+                    @if (MoveToModal?.IsShown == true)
+                    {
+                        <MoveToOUModalContent ModelChanged=@RefreshEntryComponents DirectoryModel="Computer" />
+                    }
+                </AppModal>
+                @*   <AppModal Title="Rename User" @ref=@RenameModal>
+                @if (RenameModal?.IsShown == true)
+                {
+                <RenameUserModalContent DirectoryModelRenamed=@((renamedUser)=>{Renamed(renamedUser);}) User="User" />
+                }
+                </AppModal>*@
+                @*   <AppModal Title="Set Password" @ref=@ChangePasswordModal>
+                @if (ChangePasswordModal?.IsShown == true)
+                {
+                <ChangeUserPasswordModalContent User="User" />
+                }
+                </AppModal>*@
 
 
 
-    </EditForm>
+
+
+                <Section Title=@AppLocalization["Info"]>
+                    <MudStack Row Class="@_fieldMudStackClasses">
+                        <DynamicMudInput T=string Label="@AppLocalization["Name"]" @bind-Value="@Computer.CanonicalName" Disabled=@true />
+                        <DynamicMudInput T=string Label="@AppLocalization["Operating System"]" @bind-Value="@Computer.OperatingSystem" Disabled=@true />
+
+                    </MudStack>
+
+                    </Section>
+
+
+
+                    <Section Title=@AppLocalization["Drive Details"]>
+                    <MudStack Row Class="@_fieldMudStackClasses">
+                        @if (drives != null && drives.Count > 0)
+                        {
+                            <MudDataGrid Elevation=0 Items="drives">
+                                <Columns>
+                                    <PropertyColumn Property="x=>x.DriveType" />
+                                    <PropertyColumn Property="x=>x.Letter" />
+                                    <TemplateColumn Title="Used">
+                                        <CellTemplate>
+                                            @(context.Item.PercentUsed.Round(0).ToString() + "%")
+                                        </CellTemplate>
+                                    </TemplateColumn>
+                                    <TemplateColumn Title="Capacity">
+                                        <CellTemplate>
+                                            @(context.Item.Capacity.Round(0).ToString() + "GB")
+                                        </CellTemplate>
+                                    </TemplateColumn>
+                                    <PropertyColumn Property="x=>x.FileSystem" />
+                                    <PropertyColumn Property="x=>x.Serial" />
+                                </Columns>
+                            </MudDataGrid>
+
+                        }
+
+                    </MudStack>
+                </Section>
+
+
+
+
+
+
+                <Section Title=@AppLocalization["Sessions"]>
+                    <MudStack Row Class="@_fieldMudStackClasses">
+                        <ComputerSessions Computer="Computer" />
+
+                    </MudStack>
+
+                    </Section>
+
+
+                    @if (Computer.CanReadAnyCustomFields)
+                {
+                    <Section Title="Additional Field">
+                        @if (CustomFields != null)
+                        {
+                            @foreach (var field in CustomFields)
+                            {
+                                @if (Computer.CanReadField(field))
+                                {
+                                    <CustomDirectoryField Disabled=@(!EditMode || !Computer.CanEditField(ActiveDirectoryFields.ProfilePath)) Entry="Computer" Field="@field" />
+
+                                }
+                            }
+                        }
+
+                    </Section>
+                }
+
+
+
+
+            </FlexContainer>
+        </CascadingValue>
+    </CascadingValue>
+
+</EditForm>
+@if (Computer.HasUnsavedChanges && !Computer.NewEntry)
+{
+    <UnsavedChangesPrompt SaveChanges="SaveChanges" DiscardChanges="DiscardChanges" />
+}
+<MudOverlay Visible="SavingChanges" DarkBackground="true" Absolute="true">
+    <MudProgressCircular Color="Color.Secondary" Indeterminate="true" />
+</MudOverlay>
+
+
 
 
 
@@ -78,7 +154,7 @@
 
 @code {
 
-    List<IADComputerDrive> drives=new();
+    List<IADComputerDrive> drives = new();
     IADComputer Computer => DirectoryEntry as IADComputer;
     protected override async Task OnInitializedAsync()
     {
