--- a/BLAZAMGui/Layouts/CurrentUserAvatarIcon.razor
+++ b/BLAZAMGui/Layouts/CurrentUserAvatarIcon.razor
@@ -2,9 +2,9 @@
 
 
 
-@if (UserState?.UserSettings?.ProfilePicture != null)
+@if (UserState?.Preferences?.ProfilePicture != null)
 {
-    <Base64Image Elevation="4" Class="  mud-border-secondary border-2 mud-avatar mud-avatar-medium" Data="@UserState.UserSettings?.ProfilePicture" />
+    <Base64Image Elevation="4" Class="  mud-border-secondary border-2 mud-avatar mud-avatar-medium" Data="@UserState.Preferences?.ProfilePicture" />
 
 }
 else
