--- a/BLAZAMGui/UI/OU/OUTreeView.razor
+++ b/BLAZAMGui/UI/OU/OUTreeView.razor
@@ -119,7 +119,7 @@
                 _selectedNode = value;
                 //if (TopLevel == null)
                 //    OnInitializedAsync();
-                OpenToSelected();
+                //OpenToSelected();
                 SelectedOUChanged.InvokeAsync(value);
             }
         }
