--- a/BLAZAMGui/UI/Inputs/AppCloseButton.razor
+++ b/BLAZAMGui/UI/Inputs/AppCloseButton.razor
@@ -1,6 +1,7 @@
 @inherits MudIcon
 <MudButton Class="@(Class+" rounded-circle")"
          Color="@Color"
+         Disabled=@Disabled
          Size=@Size
          IconClass="ma-0"
          Style=@(Style+"width:min-content;height:min-content;min-width:0")
@@ -11,4 +12,7 @@
 @code {
     [Parameter]
     public EventCallback<MouseEventArgs> OnClick { get; set; }
+
+    [Parameter]
+    public bool Disabled{ get; set; }
 }
