--- a/BLAZAMGui/UI/Inputs/MudSelectList.razor
+++ b/BLAZAMGui/UI/Inputs/MudSelectList.razor
@@ -15,6 +15,7 @@
            HelperTextOnFocus=@HelperTextOnFocus
            Placeholder="@Placeholder"
            Class=@Class
+           Clearable=@Clearable
            ListClass=@(ListClass+"w-min")
            Style="@(Style+" min-width:100px;")">
     @if (Values != null && Values.Count() > 0)
