--- a/BLAZAM/Pages/Configure/Templates.razor
+++ b/BLAZAM/Pages/Configure/Templates.razor
@@ -1,4 +1,5 @@
 ﻿@page "/templates"
+@page "/templates/{TemplateIdParameter:int}"
 @inherits TemplateComponent
 @attribute [Authorize(Roles = UserRoles.SuperAdmin)]
 
@@ -16,22 +17,25 @@
         </div>
 
         <MudSelectList T="string"
-            Label="Category"
+                       Label="Category"
                        Values="TemplateCategories"
                        @bind-Value="@SelectedCategory" />
 
 
         <MudSelectList T="DirectoryTemplate"
-            Label="Template"
+                       Label="Template"
                        Values="@Templates"
-                       @bind-Value="@SelectedTemplate" />
+                       Value="@SelectedTemplate"
+                       ValueChanged="@((selected)=>{Nav.NavigateTo("/templates/"+selected.Id);})"/>
         @if (Templates?.Count() > 0)
         {
             <MudButton Color=Color.Tertiary OnClick="@(()=>{
 SelectedTemplate = new();
 })" StartIcon="@Icons.Material.Filled.AddCard" />
 
-        }else{
+        }
+        else
+        {
             <MudTooltip Arrow=true IsVisible=@(Templates?.Count()<1) Text="Create your first template">
 
                 <MudButton Color=Color.Tertiary OnClick="@(()=>{SelectedTemplate = new();})" StartIcon="@Icons.Material.Filled.AddCard" />
@@ -70,6 +74,8 @@ SelectedTemplate = new();
 
 
 @code {
+ 
+
     AppModal? RenameModal;
     string? newCategoryName;
     protected async Task DuplicateTemplate(DirectoryTemplate template)
