--- a/BLAZAM/Pages/Computers/ViewComputer.razor
+++ b/BLAZAM/Pages/Computers/ViewComputer.razor
@@ -1,4 +1,5 @@
-﻿@inherits DirectoryEntryViewBase
+﻿@using BLAZAM.Gui.UI.Computers
+@inherits DirectoryEntryViewBase
 @{
     string _fieldMudStackClasses = "flex-wrap gap-10";
 }
@@ -66,7 +67,13 @@
 
                     </Section>
 
+                    <Section Title=@AppLocalization["Live Stats"]>
+                    <MudStack Row Class="@_fieldMudStackClasses">
+                        <DynamicMudInput T=int Label="@AppLocalization["Processor Usage"]" @bind-Value="@processorUsage" Disabled=@true />
+                        <LiveProcessorUsage Computer="@Computer"/>
+                    </MudStack>
 
+                    </Section>
 
                     <Section Title=@AppLocalization["Drive Details"]>
                     <MudStack Row Class="@_fieldMudStackClasses">
@@ -153,7 +160,7 @@
 
 
 @code {
-
+    int processorUsage;
     List<IADComputerDrive> drives = new();
     IADComputer Computer => DirectoryEntry as IADComputer;
     protected override async Task OnInitializedAsync()
@@ -165,12 +172,18 @@
             Task.Run(async () =>
             {
                 drives = await Computer.GetDrivesAsync();
-                if (drives == null)
-                    drives = new();
+               
                 await RefreshEntryComponents();
 
             });
+            Task.Run(async () =>
+           {
+                _= Computer.Processor;
+              
+               await RefreshEntryComponents();
 
+           });
+           
 
 
 
