--- a/BLAZAM/Pages/Configure/Templates.razor
+++ b/BLAZAM/Pages/Configure/Templates.razor
@@ -15,18 +15,20 @@
             Templates
 
         </div>
-
+        
         <MudSelectList T="string"
                        Label="Category"
                        Values="TemplateCategories"
                        @bind-Value="@SelectedCategory" />
 
-
         <MudSelectList T="DirectoryTemplate"
                        Label="Template"
                        Values="@Templates"
                        Value="@SelectedTemplate"
-                       ValueChanged="@((selected)=>{Nav.NavigateTo("/templates/"+selected.Id);})"/>
+                       ValueChanged="@((selected)=>{
+SelectedTemplate = selected;
+Nav.NavigateTo("/templates/"+selected.Id);
+})" />
         @if (Templates?.Count() > 0)
         {
             <MudButton Color=Color.Tertiary OnClick="@(()=>{
@@ -38,7 +40,7 @@ SelectedTemplate = new();
         {
             <MudTooltip Arrow=true IsVisible=@(Templates?.Count()<1) Text="Create your first template">
 
-                <MudButton Color=Color.Tertiary OnClick="@(()=>{SelectedTemplate = new();})" StartIcon="@Icons.Material.Filled.AddCard" />
+                <MudButton Color=Color.Tertiary OnClick="@(()=>{SelectedTemplate = new();Nav.NavigateTo("/templates");})" StartIcon="@Icons.Material.Filled.AddCard" />
 
             </MudTooltip>
 
@@ -67,6 +69,7 @@ SelectedTemplate = new();
 </SetHeader>
 @if (SelectedTemplate != null)
 {
+    <MudText>Test</MudText>
     <EditDirectoryTemplate DirectoryTemplate=@SelectedTemplate />
 }
 
@@ -74,7 +77,7 @@ SelectedTemplate = new();
 
 
 @code {
- 
+
 
     AppModal? RenameModal;
     string? newCategoryName;
